--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "clue/packagist-react",
     "description": "Simple async access to packagist.org's API, like listing project details, number of downloads, etc.",
     "require": {
-        "knplabs/packagist-api": "dev-master",
+        "knplabs/packagist-api": "~1.0",
         "clue/buzz-react": "0.1.*"
     },
     "license": "MIT",
