--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,6 @@
         "clue/buzz-react": "0.1.*"
     },
     "autoload": {
-        "psr-4": { "Clue\\Packagist\\React\\": "src/" }
+        "psr-4": { "Clue\\React\\Packagist\\Api\\": "src/" }
     }
 }
