--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-    "name": "clue/packagist-react",
+    "name": "clue/packagist-api-react",
     "description": "Simple async access to packagist.org's API, like listing project details, number of downloads, etc.",
     "keywords": ["packagist", "composer packages", "ReactPHP", "async"],
-    "homepage": "https://github.com/clue/packagist-react",
+    "homepage": "https://github.com/clue/reactphp-packagist-api",
     "license": "MIT",
     "authors": [
         {
