Explicitly state minimum PHP version (5.3)

--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         }
     ],
     "require": {
+        "php": ">=5.3",
         "knplabs/packagist-api": "~1.0",
         "clue/buzz-react": "0.1.*"
     },
