--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ php:
   - 5.6
   - hhvm
 before_script:
-  - composer install --prefer-source --no-interaction
+  - composer update --prefer-source --no-interaction
 script:
   - phpunit --coverage-text
