--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ php:
   - 5.3
   - 5.6
   - hhvm
-before_script:
-  - composer update --prefer-source --no-interaction
+install:
+  - composer install --prefer-source --no-interaction
 script:
   - phpunit --coverage-text
