--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "require": {
         "php": ">=5.3",
         "knplabs/packagist-api": "~1.0",
-        "clue/buzz-react": "~0.1.0|~0.2.0"
+        "clue/buzz-react": "^0.5"
     },
     "autoload": {
         "psr-4": { "Clue\\React\\Packagist\\Api\\": "src/" }
