--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "require": {
         "php": ">=5.3",
         "knplabs/packagist-api": "~1.0",
-        "clue/buzz-react": "^1.0 || ^0.5",
+        "clue/buzz-react": "^2.0 || ^1.0 || ^0.5",
         "rize/uri-template": "^0.3"
     },
     "require-dev": {
