--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,9 @@
         "clue/buzz-react": "^1.0 || ^0.5",
         "rize/uri-template": "^0.3"
     },
+    "require-dev": {
+        "phpunit/phpunit": "^6.0 || ^5.7 || ^4.8.35"
+    },
     "autoload": {
         "psr-4": { "Clue\\React\\Packagist\\Api\\": "src/" }
     }
