Update project homepage

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "clue/packagist-api-react",
-    "description": "Simple async access to packagist.org's API, like listing project details, number of downloads, etc.",
+    "description": "Simple async access to packagist.org's API, like listing project details, number of downloads etc., built on top of ReactPHP.",
     "keywords": ["packagist", "composer packages", "ReactPHP", "async"],
     "homepage": "https://github.com/clue/php-packagist-api-react",
     "license": "MIT",
