--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "rize/uri-template": "^0.3"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.0 || ^5.7 || ^4.8.35"
+        "phpunit/phpunit": "^7.0 || ^6.0 || ^5.7 || ^4.8.35"
     },
     "autoload": {
         "psr-4": { "Clue\\React\\Packagist\\Api\\": "src/" }
